src/test/resources/acceptance/reject/whileKeywordAsId.ul
int id1 ()
{
    while;
}
